src/objects/In_active_verticals__c.object
<CustomObject>
    <fields>
        <fullName>Expected_For_Listing_On__c</fullName>
        <label>Expected For Listing On</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Super_Category__c</fullName>
        <label>Super Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>has_Dangerous_Goods__c</fullName>
        <defaultValue>false</defaultValue>
        <label>has Dangerous Goods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>has_Fragile_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <label>has Fragile Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>has_Large_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <label>has Large Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>has_Medium_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <label>has Medium Items</label>
        <type>Checkbox</type>
    </fields>
    <label>InActive Vertical</label>
    <nameField>
        <label>InActive vertical Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InActive Verticals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>